<resources>
    <string name="app_name">UnifiedCare</string>
    <string name="name1">Unified</string>
    <string name="name2">Care</string>
    <string name="introtext">"A PLATFORM FOR CHILDREN
WITH SPECIAL NEEDS"</string>
    <string name="needs_spinner">Select options</string>
    <string name="therapist_details">fcndsjgyrbvjdsfnueh</string>

    <string name="unifiedcare"><font color="#FFFFFF">Unified</font>Care</string>
    <string name="already_a_member_log_in">Already a member? <font color="#FFFFFF">Log In</font></string>
    <string name="unified_care"><font color="#f5a688">Unified</font>Care</string>
    <string name="arrow"><![CDATA[<]]></string>
    <string name="back"><![CDATA[>]]></string>
    <string name="terms_and_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="share_this_app">Share This App</string>
    <string-array name="therapy_types">
        <item>Occupational therapy</item>
        <item>Speech therapy</item>
        <item>Physical therapy</item>
    </string-array>
    <string-array name="specific_needs">
        <item>Autism</item>
        <item>ADHD</item>
        <item>Down Syndrome</item>
    </string-array>
    <string-array name="age_range">
        <item>0–12 months</item>
        <item>2–5 years old</item>
        <item>6–12 years old</item>
    </string-array>
    <string name="overview_detail">Sensory bins with various textures (e.g., sand, rice, beans) ro a sensory walk with
    different textured mats</string>
    <string name="session_overview">Session Overview</string>
    <string name="therapist_notes">Therapist\'s Notes</string>
    <string name="observation">Observations</string>
    <string name="plans_fornextses">Plans for next session</string>
    <string name="reco">Therapist\'s Recommendation</string>
    <string name="progress_summary">Progress Summary</string>
    <string name="performance">Child\'s Performance</string>
    <string name="goals">Target Goals</string>
    <string name="skills_ass">Skills Assessment</string>
    <string name="current_level">Current Level</string>
    <string name="goal">Goal</string>
    <string name="messages_label">Messages</string>
    <string name="search_hint">Search here...</string>
    <string name="session">Add Session</string>
    <string name="month">Month</string>
    <string name="add_note">Add Note</string>
    <string name="parent">Parent 1</string>
    <string name="accept">ACCEPT</string>
    <string name="cancel">CANCEL</string>
    <string name="view">VIEW</string>
    <string name="edit">Edit</string>
    <string name="approve_appointments">Approve Appointments</string>
    <string name="save">SAVE</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>