<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:background="@android:color/white">

    <!-- Parent Image -->
    <ImageView
        android:id="@+id/parentImage"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginEnd="16dp"
        android:scaleType="centerCrop"
        android:src="@drawable/profile"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />



    <TextView
        android:id="@+id/parentName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="4dp"
        android:text="@string/parent"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/parentImage"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/timeSlot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="12dp"
        android:text="10:00 AM - 10:30 AM"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@id/parentImage"
        app:layout_constraintTop_toBottomOf="@id/parentName" />

    <Button
        android:id="@+id/acceptButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="12dp"
        android:backgroundTint="@android:color/black"
        android:text="@string/accept"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        app:layout_constraintStart_toStartOf="@id/parentImage"
        app:layout_constraintTop_toBottomOf="@id/timeSlot"
        app:layout_constraintWidth_percent="0.4" />

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="12dp"
        android:backgroundTint="@android:color/black"
        android:text="@string/cancel"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        app:layout_constraintStart_toEndOf="@id/acceptButton"
        app:layout_constraintTop_toBottomOf="@id/timeSlot"
        app:layout_constraintWidth_percent="0.4" />

    <TextView
        android:id="@+id/viewDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:text="@string/view"
        android:textColor="@android:color/holo_blue_dark"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/cancelButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/cancelButton"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>
