<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".unifiedcare.therapist.TherapistApproveAppointmentActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- Back Button -->
        <ImageButton
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:contentDescription="Back"
            android:src="@drawable/arrowleft"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- Month Text -->
        <TextView
            android:id="@+id/month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/month"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="20sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/back_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/back_button"
            android:layout_marginTop="16dp" />

        <!-- Calendar Layout (Days and Dates) -->
        <LinearLayout
            android:id="@+id/calendarContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/month"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp">

            <!-- Left Arrow -->
            <TextView
                android:id="@+id/leftArrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/arrow"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold" />

            <!-- Days and Dates Container -->
            <LinearLayout
                android:id="@+id/daysDatesContainer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_margin="8dp">

                <!-- Days of the week -->
                <LinearLayout
                    android:id="@+id/daysOfWeekContainer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center" />

                <!-- Dates -->
                <LinearLayout
                    android:id="@+id/datesContainer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center" />

            </LinearLayout>

            <!-- Right Arrow -->
            <TextView
                android:id="@+id/rightArrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/back"
                android:contentDescription="Next"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold"
                android:padding="8dp" />
        </LinearLayout>

        <TextView
            android:id="@+id/approveAppointments"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/approve_appointments"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/calendarContainer"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp" />

        <!-- RecyclerView for Appointments -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewAppointments"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/approveAppointments"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
